app/style.css
/* ... */
.ReactTable .rt-tfoot .rt-td {
    border: 0px !important;
}
.calculateSign {
    margin-left: 10px;
    cursor: pointer;
    color: #ff9800;
    font-size: 22px;
    position: absolute;
    padding-top: 11px;
}
.reconfigureContainer{
  padding: 0 8px 0 8px;
}

#configureProductsList .nav {
    border: 0px!important;
    border-bottom: 2px solid #DDD !important;
}
.reconfigurePanel {
    border: solid 1px #d0d0d0; 
    border-radius: 5px !important;
}
.validationMessage {
    color: brown;
    font-size: 14px;
    float: right;
    font-weight: 500;
    padding: 20px;
}
.configureGroupHeader {
    line-height: 2;
    font-size: 17px;
}
.reconfigure-edit-icon {
    display: inline-block!important;
    margin-left: 5px;
}
.addConfigurationLabel {
    margin-left: 15px;
}

